<resources>
    <string name="app_name">SampleApp</string>
    <string name="restaurants">Restaurants</string>
    <string name="enter_restaurant_name">enter restaurant name</string>
    <string name="text_select_filter">Select Filter</string>
    <string name="best_match">Best Match</string>
    <string name="newest">Newest</string>
    <string name="rating_average">Rating Average</string>
    <string name="distance">Distance</string>
    <string name="popularity">Popularity</string>
    <string name="average_product_price">Average Product Price</string>
    <string name="delivery_cost">Delivery Cost</string>
    <string name="min_cost">Min Cost</string>
    <string name="sorted_value">Sorted Value:</string>
    <string name="sort_type">Sort Type:</string>
    <string name="status">Status:</string>
</resources>